# google-map-app

./: .gitignore  CLAUDE.md  DESIGN_GUIDELINE.md  GCP_SETUP_GUIDE.md  PROJECT_SPECIFICATION.md  README.md  TESTING_POLICY.md
backend/: .env.example  Makefile  README.md  pyproject.toml  run.py  test_google_maps.py  test_prompts.py  test_vertex_ai.py
backend/app/: __init__.py  config.py  main.py
backend/app/models/: api.py  conversation.py
backend/app/routes/: chat.py  places.py
backend/app/services/: cache.py  conversation_manager.py  google_maps.py  prompts.py  session_store.py  vertex_ai.py
backend/tests/: __init__.py  conftest.py  test_chat_api.py  test_conversation.py  test_integration.py  test_main.py
frontend/: .env.example  README.md  biome.json  index.html  package.json  vite.config.js
frontend/src/: App.jsx  App.tsx  vite-env.d.ts
frontend/src/components/: AgeSelector.tsx  ChatContainer.tsx  ChatInput.tsx  ChatMessage.tsx  CompactRestaurantCard.tsx  EnrichedPlaceCard.tsx  InlinePlaceCard.tsx  MapDisplay.tsx  PlaceCard.tsx  PlaceDrawer.tsx  PlanSummary.tsx  QuickReplies.tsx  RestaurantCard.tsx  RichPlacesDisplay.tsx  Schedule.tsx
frontend/src/data/: mockPlan.ts
frontend/src/hooks/: useChat.ts  useGeolocation.ts  useMobileDetection.ts  usePlan.ts  useSession.ts
frontend/src/services/: api.ts
frontend/src/styles/: App.css  index.css
frontend/src/types/: plan.ts
